--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <div class="form-group">
                     <label for="user">User</label>
                     <input type="text" class="form-control" id="user" aria-describedby="userHelp"
-                        placeholder="User Name" required tabindex="3">
+                        placeholder="User Name" value="dmAdmin" required tabindex="3">
                     <small id="userHelp" class="form-text text-muted">* Decision Service credentials (user
                         name).</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" aria-describedby="passwordHelp"
-                        placeholder="Password" required tabindex="4">
+                        placeholder="Password" value="redhatdm1!" required tabindex="4">
                     <small id="passwordHelp" class="form-text text-muted">* Decision Service credentials
                         (password).</small>
                 </div>
